tests/baselines/reference/tsxElementResolution7.errors.txt
file.tsx(12,5): error TS2339: Property 'other' does not exist on type 'typeof my'.
file.tsx(19,11): error TS2339: Property 'non' does not exist on type 'typeof my'.


==== file.tsx (2 errors) ====
    declare namespace JSX {
    	interface Element { }
    	interface IntrinsicElements { }
    }
    
    namespace my {
        export var div: any;
    }
    // OK
    <my.div n='x' />;
    // Error
    <my.other />;
        ~~~~~
!!! error TS2339: Property 'other' does not exist on type 'typeof my'.
    
    namespace q {
        import mine = my;
        // OK
        <mine.div n='x' />;
        // Error
        <mine.non />;
              ~~~
!!! error TS2339: Property 'non' does not exist on type 'typeof my'.
    }
    